--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,3 +1,9 @@
+h1, h2, h3, h4 {
+    margin-top: 1em;
+    margin-bottom: 0.5em;
+    padding: 0;
+}
+
 .bs-sidebar .nav > .active > a,
 .bs-sidebar .nav > .active:hover > a,
 .bs-sidebar .nav > .active:focus > a {
@@ -8,4 +14,9 @@
 hr {
     margin-top: 2em;
     margin-bottom: 2em;
+}
+
+li > img {
+    margin-top: 0.8em;
+    margin-bottom: 0.8em;
 }
