Added a last resort for handling "Grbl has not finished booting." as pointed out by user.

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -9,6 +9,7 @@ h1, h2, h3, h4 {
 .bs-sidebar .nav > .active:focus > a {
     background-color: #e6e6e6;
     border-right: 2px solid;
+    font-weight: normal;
 }
 
 hr {
