--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -12,6 +12,15 @@ h1, h2, h3, h4 {
     font-weight: normal;
 }
 
+.navitem.active,
+.dropdown.active {
+    font-weight: bold;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white !important;
+}
+
 hr {
     margin-top: 2em;
     margin-bottom: 2em;
